--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Laravel Maintenance Mode without terminal access.",
     "type": "library",
     "require": {
-        "laravel/laravel": "^6.0"
+        "laravel/laravel": "^8.0|^9.0"
     },
     "license": "MIT",
     "autoload": {
